# pr-risk-scorer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
plans/260218-1858-pr-risk-scorer-bootstrap/: phase-01-project-setup-and-foundation.md  phase-02-github-client.md  phase-03-analyzers-group-a.md  phase-04-analyzers-group-b.md  phase-05-scoring-engine.md  phase-06-output-formatters.md  phase-07-cli-integration-and-e2e.md  plan.md
plans/260218-1858-pr-risk-scorer-bootstrap/research/: researcher-260218-1858-pr-risk-algorithms.md  researcher-260218-1858-tech-architecture.md
plans/reports/: code-reviewer-260218-2110-pr-risk-scorer-review.md  fullstack-developer-260218-2018-phase04-analyzers-group-b.md  fullstack-developer-260218-2024-phase-07-implementation.md  scout-260218-2110-edge-case-analysis.md
src/pr_risk_scorer/: __init__.py  cli.py  config.py  github_client.py  models.py
src/pr_risk_scorer/analyzers/: __init__.py  base_analyzer.py  blast_radius.py  complexity.py  dependency.py  hot_path.py  (+2 more)
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_github_client.py
tests/test_analyzers/: __init__.py  test_blast_radius.py  test_complexity.py  test_dependency.py  test_hot_path.py  test_ownership.py  test_review.py
tests/test_output/: __init__.py  test_get_reporter.py  test_json_reporter.py  test_markdown_reporter.py  test_terminal_reporter.py
tests/test_scoring/: test_weighted_scorer.py
(+6 files in other folders)
