[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-risk-scorer"
version = "0.1.0"
description = "Analyze GitHub PRs and predict failure likelihood post-merge"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyGithub>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
pr-risk-scorer = "pr_risk_scorer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
